--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-hello
+<!DOCTYPE html>
+<html land="en">
+<head>
+  <meta charset="utf-8">
+  <title>yuyamada</title>
+</head>
+<body>
+  <p>WIP</p>
+</body>
+</html>
